--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
+        "nunomaduro/phpinsights": "^2.6",
+        "phpstan/phpstan-strict-rules": "^1.4",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
@@ -57,7 +59,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
